# PRIME-L

./: .gitignore  README.md  pyproject.toml
configs/: default.json
data/: lpe1439.pkl
primel/: __init__.py  cli.py  combo.py  config.py  data.py  embedding.py  fsfp_dataset.py  lora_maml.py  losses.py  mutations.py  plm.py  scoring.py  trainer.py  utils.py
scripts/: smoke_test.sh
