[project]
name = "primel"
version = "0.1.0"
description = "PRIME-L pipeline for LPE1439 few-shot fine-tuning and mutation design"
requires-python = ">=3.10"
dependencies = [
    "torch==2.3.0",
    "transformers==4.41.1",
    "peft==0.4.0",
    "learn2learn==0.2.1",
    "pandas==2.2.2",
    "openpyxl==3.1.5",
    "scipy==1.13.1",
    "scikit-learn==1.5.0",
    "tqdm==4.66.4",
    "numpy==1.26.4",
]

[tool.setuptools.packages.find]
include = ["primel*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
